# Bten

./: README.md  pyproject.toml
.github/workflows/: ci.yml
lab_of_crm/: hooks.py  modules.txt  patches.txt
lab_of_crm/api/: quotation.py
lab_of_crm/fixtures/: client_script.json  custom_field.json  document_naming_rule.json  plan.json  print_format.json  server_script.json
lab_of_crm/lab_of_crm/custom/: company.json  customer.json  item.json  item_barcode.json  lead.json  packed_item.json  quotation.json  quotation_item.json
lab_of_crm/lab_of_crm/doctype/deal/: deal.js  deal.json  deal.py  test_deal.py
lab_of_crm/lab_of_crm/doctype/deal_status/: deal_status.js  deal_status.json  deal_status.py  test_deal_status.py
lab_of_crm/lab_of_crm/doctype/lead_stage/: lead_stage.js  lead_stage.json  lead_stage.py  test_lead_stage.py
lab_of_crm/lab_of_crm/doctype/plan/: plan.js  plan.json  plan.py  test_plan.py
lab_of_crm/lab_of_crm/doctype/specifications/: specifications.json  specifications.py
lab_of_crm/lab_of_crm/doctype/task_reminder/: task_reminder.js  task_reminder.json  task_reminder.py  test_task_reminder.py
lab_of_crm/lab_of_crm/doctype/test/: test.js  test.json  test.py  test_test.py
lab_of_crm/patches/: add_company_to_print_format.py
lab_of_crm/public/css/: crm_css22.css  crm_css33.css  crm_css4.css  crm_nav.css  lab_of_crm.css  main.css
lab_of_crm/www/: login.css  login.html  login.py
